[package]
name = "substrate-wasmtime"
version = "0.16.0-threadsafe.1"
authors = ["The Wasmtime Project Developers"]
description = "[a thread-safe patched] High-level API to expose the Wasmtime runtime"
documentation = "https://docs.rs/wasmtime"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/wasmtime"
readme = "README.md"
edition = "2018"

[dependencies]
wasmtime-runtime = { package = "substrate-wasmtime-runtime", path = "../runtime", version = "0.16.0-threadsafe.1" }
wasmtime-environ = { version = "0.16.0" }
wasmtime-jit = { package = "substrate-wasmtime-jit", path = "../jit", version = "0.16.0-threadsafe.1" }
wasmtime-profiling = { version = "0.16.0" }
wasmparser = "0.51.2"
target-lexicon = { version = "0.10.0", default-features = false }
anyhow = "1.0.19"
region = "2.0.0"
libc = "0.2"
cfg-if = "0.1.9"
backtrace = "0.3.42"
rustc-demangle = "0.1.16"
lazy_static = "1.4"
wat = { version = "1.0.10", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.7"

[badges]
maintenance = { status = "experimental" }

[features]
default = ['wat', 'jitdump']

# Enables experimental support for the lightbeam codegen backend, an alternative
# to cranelift. Requires Nightly Rust currently, and this is not enabled by
# default.
lightbeam = ["wasmtime-jit/lightbeam"]

# Enables support for the `perf` jitdump profiler
jitdump = ["wasmtime-jit/jitdump"]

# Enables support for the `VTune` profiler
vtune = ["wasmtime-jit/vtune"]
