[package]
name = "substrate-wasmtime-jit"
version = "0.16.0-threadsafe.1"
authors = ["The Wasmtime Project Developers"]
description = "[a thread-safe patched] JIT-style execution for WebAsssembly code in Cranelift"
documentation = "https://docs.rs/wasmtime-jit"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/bytecodealliance/wasmtime"
readme = "README.md"
edition = "2018"

[dependencies]
cranelift-codegen = { version = "0.63.0", features = ["enable-serde"] }
cranelift-entity = { version = "0.63.0", features = ["enable-serde"] }
cranelift-wasm = { version = "0.63.0", features = ["enable-serde"] }
cranelift-native = { version = "0.63.0" }
cranelift-frontend = { version = "0.63.0" }
wasmtime-environ = { version = "0.16.0" }
wasmtime-runtime = { package = "substrate-wasmtime-runtime", path = "../runtime", version = "0.16.0-threadsafe.1" }
wasmtime-debug = { version = "0.16.0" }
wasmtime-profiling = { version = "0.16.0" }
region = "2.0.0"
thiserror = "1.0.4"
target-lexicon = { version = "0.10.0", default-features = false }
wasmparser = "0.51.2"
more-asserts = "0.2.1"
anyhow = "1.0"
cfg-if = "0.1.9"
log = "0.4"
gimli = { version = "0.20.0", default-features = false, features = ["write"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.8", features = ["winnt", "impl-default"] }

[features]
lightbeam = ["wasmtime-environ/lightbeam"]
jitdump = ["wasmtime-profiling/jitdump"]
vtune = ["wasmtime-profiling/vtune"]

[badges]
maintenance = { status = "experimental" }
